<resources>
    <string name="app_name">DKT</string>
    <string name="text_propNumber">{0}</string>
    <string name="text_propName">Property Name: %s</string>
    <string name="text_price">Price: %s$</string>
    <string name="text_ownedBy">Owned by: %s</string>
    <string name="text_housesAmount">Houses: %d</string>
    <string name="text_propInfoTitle">Property Information</string>
    <string name="textCD_prop1">Property 1</string>
    <string name="textCD_prop2">Property 2</string>
    <string name="textCD_prop3">Property 3</string>
    <string name="textCD_prop4">Property 4</string>
    <string name="text_backToGame">Back</string>
    <string name="general_information">General Information</string>
    <string name="players_online">Players online: %s / %s</string>
    <string name="cash_text">Cash: %s$</string>
    <string name="my_properties_text">My Properties: %s</string>
    <string name="playing_time_text">Playing Time: %s %s, %s, %s, %s %s</string>
    <string name="roll_the_dice">Roll the dice</string>
    <string name="property_information">Property Information</string>
    <string name="dice_information_text">%s rolls the dice</string>
    <string name="gameview_image_description">DKT-Board</string>
    <string name="activity_text">Activity: %s</string>
    <string name="EnterButton">Enter</string>
    <string name="HostGameButton">Host Game</string>
    <string name="JoinGameButton">Join Game</string>
    <string name="BackButton">Back</string>
    <string name="StartButton">Start</string>
    <string name="PleaseEnterUsername">Please enter your username:</string>
    <string name="UserName">Username</string>
    <string name="DktLogoDescription">DKTLogo</string>
    <string name="Avatar">Avatar</string>
    <string name="PlayerLobby">Player Lobby</string>
    <string name="HostGame">New Host Game:</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="ServerName">ServerName</string>
    <string name="UserRole">UserRole</string>
    <string name="JoiningTime">Joined on:</string>
    <string name="TotalPlayers">Total Players:</string>
    <string name="Host">HOST</string>
    <string name="Player">PLAYER</string>
    <string name="Joined">Joined:</string>
    <string name="FindHost">Find Host</string>
    <string name="JoinBtn">Join</string>
    <string name="HostId">Host ID</string>
    <string name="EnterServerName">Please enter server name:</string>
    <string name="EnterMaxPlayers">Please enter max players:</string>
    <string name="Time">Time</string>
    <string name="Rounds">Rounds</string>
    <string name="enterRoundsOrTime">Enter rounds or minutes</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="FirstPlace">First Place</string>
    <string name="SecondPlace">Second Place</string>
    <string name="ThirdPlace">Third Place</string>
    <string name="FourthPlace">4</string>
    <string name="FifthPlace">5</string>
    <string name="SixthPlace">6</string>
    <string name="Wealth">Wealth</string>
    <string name="Finish">Finish</string>
    <string name="text_ip">IP: %s</string>
    <string name="joined_format">Joined on: %1$s</string>

    <string name="NSDServiceName">delta_dkt</string>
    <string name="NSDServiceType">_delta_dkt.tcp</string>
    <string name="hours_plural_text">hours</string>
    <string name="hour_sing_text">hour</string>
    <string name="minutes_plural_text">minutes</string>
    <string name="minute_sing_text">minute</string>
    <string name="seconds_plural_text">seconds</string>
    <string name="second_sing_text">second</string>
    <string name="start_broadcast_toast_text">The game successfully started with %s players</string>
    <string name="img_description_player6_text">Player 6</string>
    <string name="img_description_player5_text">Player 5</string>
    <string name="img_description_player3_text">Player 3</string>
    <string name="img_description_player4_text">Player 4</string>
    <string name="img_description_player2_text">Player 2</string>
    <string name="img_description_player1_text">Player 1</string>
    <string name="start_money_activity_text">%s received start money</string>

    <!-- #START Cheating Texts -->
    <string name="cheat_open_report_menu">Report Cheater</string>
    <string name="reportCheater_message">Activity: Successfully reported %s as a Cheater!</string>

    <!-- ##START Cheating-ReportMenu Texts -->
    <string name="cheat_popup_selection_menu_heading">Report Menu</string>
    <string name="cheat_popup_selection_menu_description">
        Select a cheating-player from the list down below to report him as such. Act with caution.
    </string>
    <string name="cheat_popup_selection_menu_canel_button">Cancel</string>
    <string name="cheat_popup_selection_menu_submit_button">Report</string>

    <!-- ##START Cheating-ReportMenu Texts -->
    <string name="cheat_user_element_username_placeholder">Player Placeholder 1</string>
    <string name="cheat_user_element_image_description">Represents the players figure in the current game.</string>

    <!-- END Cheating Texts -->
    <string name="movement_info_message_singular">Activity: %s moved %s step and is now located at pos: %s</string>
    <string name="movement_info_message_plural">Activity: %s moved %s steps and is now located at pos: %s</string>

    <string name="pay_tax_activity_text">%s had to pay %s%% taxes. Old cash %s$, new cash %s$</string>
    <string name="pay_static_tax_activity_text">%s had to pay %s$ taxes. Old cash %s$, new cash %s$</string>
    <string name="notify_inprisonment">%s has been sent to prison!</string>
    <string name="text_rent">Rent: %s$</string>

    <string name="jail_card">JailCard</string>
    <string name="lucky_card">LuckyCard</string>
    <string name="unlucky_card">UnluckyCard</string>
    <string name="jail_card_text">%s has to go to jail</string>
    <string name="lucky_card_text1">For bank interest %s gets %s$</string>
    <string name="lucky_card_text2">For the sale of shares %s receives %s$</string>
    <string name="lucky_card_text3">%s gets %s$ for travel expenses contribution</string>
    <string name="unlucky_card_text1">%s needs to pay %s$ for life insurance</string>
    <string name="unlucky_card_text2">%s needs to pay %s$ for health insurance</string>

    <string name="out_of_jail_card">OutOfJailCard</string>
    <string name="out_of_jail_card_text">This card will free you from prison! Keep it, you will need it.</string>
    <string name="lucky_card_text4">The bank pays %s dividends: %s$</string>
    <string name="lucky_card_text5">For an invention %s gets %s$</string>
    <string name="unlucky_card_text3">%s pays %s$ police penalty</string>
    <string name="unlucky_card_text4">%s pays %s$ for wrong parking</string>
    <string name="travel_card">TravelCard</string>
    <string name="travel_card_text1">Move to \"Mirabellplatz\" (field 25). If you pass the Start-Field you will get 200€</string>
    <string name="travel_card_text2">Go 4 fields back</string>
    <string name="travel_card_text3">Move 7 fields forward</string>
    <string name="travel_card_text4">Move to \"Annenstraße\" (field 6). If you pass the Start-Field you will get 200€</string>
    <string name="outOfPrisonCardAwarded_notification">%s has been awarded with a get-out-of-jail-card!</string>

    <string name="suspension_count">You are suspended for %s more rounds</string>
    <string name="playerName_info_text">You are spectator!</string>
    <string name="text_player_leave_confirmation">Do you really want to leave?</string>
    <string name="text_button_yes">Yes</string>
    <string name="text_button_no">No</string>
    <string name="text_player_leave_hint">Hint: Your wealth will be reset!</string>
    <string name="text_player_leave_hint_host">Hint: Since you are the host, the server will be closed!</string>
    <string name="contentdescription_host_wlan">Host WLan Logo</string>
    <string name="text_buy_property_confirmation_question">Do you want to buy the following property?</string>
    <string name="player_buy_property_activity_text">%s has successfully bought %s (%s) for %s$</string>
    <string name="player_pay_rent_activity_text">%s had to pay %s$ rent for property %s (Owner %s)</string>
    <string name="text_property_buy_hint">Property %s (%s) with %s$ rent for %s$</string>

    <plurals name="game_started_activity_text">
        <item quantity="one">Game started with %d player</item>
        <item quantity="other">Game started with %d players</item>
    </plurals>
    <string name="toast_buy_property_too_less_cash">You have not enough cash to buy this property!</string>
    <string name="toast_buy_property_error_buying">Error buying property! Already bought by someone else?</string>
    <string name="text_player_move_plural">%s moved %s steps</string>
    <string name="text_player_move_sing">%s moved %s step</string>
    <string name="moved_steps">%s</string>
    <string name="no_player_rolled_dice">No player rolled the dice</string>

    <string name="player_out_of_jail_card_activity_text">%s received an Out-Of-Jail-Card</string>
    <string name="player_out_of_jail_activity_text">%s was released from jail due to Out-Of-Jail-Card</string>

    <string name="player_lost_activity_text">%s was eliminated from the game!</string>
    <string name="player_leave_activity_text">%s left the game!</string>
    <string name="player_lost_pay_rent_activity_text">%s lost. Had not enough money to pay for rent!</string>
    <string name="player_lost_timeout_activity_text">%s timed out!</string>
    <string name="player_lost_wrong_punish_activity_text">%s lost. Had not enough money to pay for wrong cheater report!</string>
    <string name="player_lost_cash_task_activity_text">%s lost. Had not enough money to pay for cash task!</string>
    <string name="player_lost_pay_tax_activity_text">%s lost. Had not enough money to pay taxes!</string>
</resources>