<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <ImageView
        android:id="@+id/dkt_logo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/DktLogoDescription"
        app:srcCompat="@drawable/dkt_logo_2"
        tools:layout_editor_absoluteY="128dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dkt_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:text="@string/FindHost"
        android:textSize="30sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@id/textView"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/backbtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/host_btn_background"
        android:text="@string/BackButton"
        android:textColor="@color/dkt_yellow"
        android:textSize="20sp" />

    <Button
        android:id="@+id/joinbtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="270dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/host_btn_background"
        android:text="@string/JoinBtn"
        android:textColor="@color/dkt_yellow"
        android:textSize="20sp" />


</RelativeLayout>