<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/playerLeavePopUpConstraintLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="298dp"
            android:layout_height="148dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="1dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/playerLeavePopUpInnerConstraintLayout">

        <TextView
                android:text="@string/text_player_leave_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_leaveGameQuestion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="16sp" />

        <Button
                android:text="@string/text_button_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_leaveGame_yes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="15dp" />

        <Button
                android:text="@string/text_button_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_leaveGame_no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="16dp"
                android:textStyle="bold" />

        <TextView
                android:text="@string/text_player_leave_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_playerLeaveHint"
                app:layout_constraintTop_toBottomOf="@+id/textView_leaveGameQuestion"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
            android:contentDescription="@string/DktLogoDescription"
            android:id="@+id/dktLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/dkt_logo_2"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/playerLeavePopUpConstraintLayout"
            app:layout_constraintBottom_toBottomOf="@id/playerLeavePopUpInnerConstraintLayout"
            app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>