<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/playerBuyPropertyPopUpConstraint">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPopUp"
            android:layout_width="300dp"
            android:layout_height="190dp"
            android:background="@drawable/pop_up_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


        <TextView
                android:id="@+id/textView_buyPropertyQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_buy_property_confirmation_question"
                android:textColor="@color/blackSpecial"
                android:textSize="20sp"
                android:paddingTop="28dp"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="@id/layoutPopUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" />

        <Button
                android:id="@+id/button_buyProperty_no"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/text_button_no"
                android:background="@drawable/host_btn_background"
                android:textColor="@color/dkt_yellow"
                android:textSize="14sp"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp" />

        <Button
                android:id="@+id/button_buyProperty_yes"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@drawable/host_btn_background"
                android:text="@string/text_button_yes"
                android:textColor="@color/dkt_yellow"
                android:textSize="14sp"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.924"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp" />

        <TextView
                android:text="@string/text_player_leave_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_playerBuyPropertyHint"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/dkt_red"
                app:layout_constraintTop_toBottomOf="@+id/textView_buyPropertyQuestion"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:visibility="invisible" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
            android:contentDescription="@string/DktLogoDescription"
            android:id="@+id/dktLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/dkt_logo_2"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/layoutPopUp"
            app:layout_constraintBottom_toTopOf="@id/layoutPopUp" />


</androidx.constraintlayout.widget.ConstraintLayout>