<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:id = "@+id/popUpConstraintLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPopUp"
        android:layout_width="360dp"
        android:layout_height="550dp"
        android:background="@drawable/pop_up_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/popUpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangers"
            android:gravity="center_horizontal"
            android:paddingTop="28dp"
            android:text="@string/AwardCeremony"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/layoutPopUp" />

        <LinearLayout
            android:id="@+id/firstLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/popUpTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/secondWinnerTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/SecondPlace"
                android:gravity="center" />

            <TextView
                android:id="@+id/firstWinnerTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/FirstPlace"
                android:gravity="center" />

            <TextView
                android:id="@+id/thirdWinnerTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/ThirdPlace"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/firstLinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/secondWealthTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Wealth"
                android:gravity="center" />

            <TextView
                android:id="@+id/firstWealthTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Wealth"
                android:gravity="center" />

            <TextView
                android:id="@+id/thirdWealthTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Wealth"
                android:gravity="center" />

        </LinearLayout>

        <ImageView
            android:id="@+id/winnerPodiumImage"
            android:contentDescription="@string/AwardCeremony"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/winner_podium_dkt"
            app:layout_constraintTop_toBottomOf="@id/secondLinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/recyclerViewWinner"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/winnerPodiumImage"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="264dp" />


        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/dkt_red"
            android:fontFamily="@font/bangers"
            android:text="@string/OK"
            android:textColor="@color/dkt_yellow"
            android:textSize="14sp"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewWinner" />


    </androidx.constraintlayout.widget.ConstraintLayout>







    <ImageView
        android:contentDescription="@string/DktLogoDescription"
        android:id="@+id/dktLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/dkt_logo_2"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutPopUp"
        app:layout_constraintBottom_toTopOf="@id/layoutPopUp"/>



</androidx.constraintlayout.widget.ConstraintLayout>